# fast-api-score-api

./: .gitignore  pyproject.toml
score_api/: app.py
