[tool.poetry]
name = "score-api"
version = "0.1.0"
description = ""
authors = ["ryofac <ryanfaustinocarvalho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.111.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.9"
pyflakes = "^3.2.0"

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "W", "E", "F", "PL", "PT"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
